<resources>
    <string name="app_name">Task</string>
    <string name="user_name">User name</string>
    <string name="age">Age</string>
    <string name="job_title">Job title</string>
    <string name="enter_data">Enter data</string>
    <string name="add">Add</string>
    <string name="add_user">Add user</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="required">Required</string>
</resources>