<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.main.MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/action_bar"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            app:title="@string/add_user"
            app:titleCentered="true"
            app:titleTextAppearance="@style/titleTextAppearance" />

    </com.google.android.material.appbar.AppBarLayout>

    <EditText
        android:id="@+id/et_user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/medium_margin"
        android:layout_marginTop="@dimen/medium_margin"
        android:background="@drawable/rounded_corners_gray_stroke"
        android:hint="@string/user_name"
        android:padding="16dp" />

    <EditText
        android:id="@+id/et_age"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/medium_margin"
        android:layout_marginTop="@dimen/medium_margin"
        android:background="@drawable/rounded_corners_gray_stroke"
        android:hint="@string/age"
        android:inputType="number"
        android:padding="16dp" />

    <EditText
        android:id="@+id/et_job_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/medium_margin"
        android:layout_marginTop="@dimen/medium_margin"
        android:background="@drawable/rounded_corners_gray_stroke"
        android:hint="@string/job_title"
        android:padding="16dp" />

    <RadioGroup
        android:id="@+id/rg_gender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/medium_margin"
        android:layout_marginTop="@dimen/medium_margin"
        android:orientation="horizontal"
        android:padding="16dp">

        <RadioButton
            android:id="@+id/rb_male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:buttonTint="@color/colorPrimary"
            android:checked="true"
            android:text="@string/male" />

        <RadioButton
            android:id="@+id/rb_female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/female" />
    </RadioGroup>


    <Button
        android:id="@+id/btn_add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/medium_margin"
        android:layout_marginVertical="@dimen/large_margin"
        android:background="@drawable/rounded_corner_color_primary_dark_solid"
        android:text="@string/add"
        android:textColor="@color/white"
        android:textSize="@dimen/medium_text" />

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/medium_margin"
        android:layout_marginVertical="@dimen/large_margin"
        android:src="@drawable/list"
        android:tint="@color/white"
        app:backgroundTint="@color/colorPrimary" />
</LinearLayout>